@@ -1,4 +1,5 @@
 3.0.30
+ * Refactor validation logic in StorageService.rebuild (CASSANDRA-18803)
  * Make alternation of a user type validate the same way as creation of a user type does (CASSANDRA-18585)
  * Backport of CASSANDRA-16905 Further restrict schema column drop/recreate conversions (CASSANDRA-18760)
  * CQLSH emits a warning when the server version doesn't match (CASSANDRA-18745)
